[package]
name = "rchip8"
version = "0.1.0"
authors = ["josebouza"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.1"
log = "0.4.0"
env_logger = "0.8.2"

[dependencies.sdl2]
version="0.34"
features = ["bundled", "static-link"]
